Change video title padding to margin to stop bizarre spacing issue

--- a/wonder/romeo/static/scss/specifics/video/_video-view.scss
+++ b/wonder/romeo/static/scss/specifics/video/_video-view.scss
@@ -4,7 +4,7 @@
 
 .video-view__title {
   margin-bottom: $half-spacing-unit;
-  padding-top: $base-spacing-unit;
+  margin-top: $base-spacing-unit;
   font-family: $heading-font-family;
   font-size: 48px;
   line-height: 58px;
